add footer with contact info

--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="Personal Stylist"
-      content="Personal Stylist - create your own Capsule Wardrobe"
-    />
+    <!-- Place your kit's code here -->
+    <script src="https://kit.fontawesome.com/056e2f2f3d.js"></script>
+    <meta name="Personal Stylist" content="Personal Stylist - create your own Capsule Wardrobe" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-        <title>React App</title>
-  </head>
-  <body class="bg-washed-freen mid-gray helvetica">
+    <title>React App</title>
+</head>
+
+<body class="bg-washed-freen mid-gray helvetica ma0">
     <div id="root"></div>
-  </body>
+</body>
+
 </html>
