--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <meta name="Personal Stylist" content="Personal Stylist - create your own Capsule Wardrobe" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>Personal Stylist</title>
 </head>
 
 <body class="bg-washed-freen mid-gray helvetica ma0">
