--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <title>Personal Stylist</title>
 </head>
 
-<body class="bg-washed-freen mid-gray helvetica ma0">
+<body class="mid-gray helvetica ma0">
     <div id="root"></div>
 </body>
 
