change color of text overall

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <title>Personal Stylist</title>
 </head>
 
-<body class="mid-gray helvetica ma0">
+<body class="white helvetica ma0">
     <div id="root"></div>
 </body>
 
