meta for facebook and twitter

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
     <meta name="Personal Stylist" content="Personal Stylist - create your own Capsule Wardrobe" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta name="twitter:image" content="https://github.com/Lzduque/personal-stylist/blob/master/public/thumbnail.jpg">
+    <meta property="og:image" content="https://github.com/Lzduque/personal-stylist/blob/master/public/thumbnail.jpg" />
 
     <title>Personal Stylist</title>
 </head>
